Further LDAP Implementation
svn path=/trunk/eXist/; revision=12933